Add support for Elementum
Adds support for Elementum addon.

Tested on Kodi 20.4.

--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -191,6 +191,10 @@ msgctxt "#30251"
 msgid "No sources found to play"
 msgstr "No hay fuentes disponibles para reproducir"
 
+msgctxt "#30252"
+msgid "Addon Elementum not found - (plugin.video.elementum)"
+msgstr "El Addon de Elementum no esta instalado - (plugin.video.elementum)"
+
 msgctxt "#30650"
 msgid ""
 msgstr ""
