--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -40,11 +40,11 @@ msgid "Jackett Configuration:"
 msgstr ""
 
 msgctxt "#30023"
-msgid "Jackett Api Key"
+msgid "Api Key"
 msgstr ""
 
 msgctxt "#30025"
-msgid "Jackett Host"
+msgid "Host"
 msgstr ""
 
 msgctxt "#30026"
@@ -76,11 +76,11 @@ msgid "Prowlarr Configuration:"
 msgstr ""
 
 msgctxt "#30051"
-msgid "Prowlarr Api Key"
+msgid "Api Key"
 msgstr ""
 
 msgctxt "#30052"
-msgid "Prowlarr Host"
+msgid "Host"
 msgstr ""
 
 msgctxt "#30053"
