--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -227,6 +227,10 @@ msgctxt "#30252"
 msgid "Addon Elementum not found - (plugin.video.elementum)"
 msgstr ""
 
+msgctxt "#30253"
+msgid "Addon JackTorr not found - (plugin.video.jacktorr)"
+msgstr ""
+
 msgctxt "#30650"
 msgid "Queued"
 msgstr ""
@@ -306,6 +310,11 @@ msgstr ""
 msgctxt "#30708"
 msgid "Stop"
 msgstr ""
+
+msgctxt "#30709"
+msgid "Drop torrent"
+msgstr ""
+
 
 
 
