improvements on torrent fetch

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -228,7 +228,7 @@ msgid "Addon Elementum not found - (plugin.video.elementum)"
 msgstr ""
 
 msgctxt "#30253"
-msgid "Addon JackTorr not found - (plugin.video.jacktorr)"
+msgid "Addon Jacktorr not found - (plugin.video.jacktorr)"
 msgstr ""
 
 msgctxt "#30650"
