--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -216,8 +216,8 @@ msgid "Addon Elementum not found - (plugin.video.elementum)"
 msgstr "Addon Elementum não encontrado - (plugin.video.elementum)"
 
 msgctxt "#30253"
-msgid "Addon JackTorr not found - (plugin.video.jacktorr)"
-msgstr "Addon JackTorr não encontrado - (plugin.video.jacktorr)"
+msgid "Addon Jacktorr not found - (plugin.video.jacktorr)"
+msgstr "Addon Jacktorr não encontrado - (plugin.video.jacktorr)"
 
 msgctxt "#30650"
 msgid "Queued"
