add Plex support

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -175,6 +175,10 @@ msgctxt "#30224"
 msgid "Prowlarr API key is invalid"
 msgstr ""
 
+msgctxt "#30226"
+msgid "You need to configure Plex first"
+msgstr ""
+
 msgctxt "#30227"
 msgid "You need to configure Torrentio first"
 msgstr ""
