--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -163,6 +163,10 @@ msgctxt "#30224"
 msgid "Prowlarr API key is invalid"
 msgstr "Chave de API do Prowlarr é inválida"
 
+msgctxt "#30226"
+msgid "You need to configure Plex first"
+msgstr "Você precisa configurar o Plex primeiro"
+
 msgctxt "#30227"
 msgid "You need to configure Torrentio first"
 msgstr "Você precisa configurar o Torrentio primeiro"
