--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -159,6 +159,10 @@ msgctxt "#30224"
 msgid "Prowlarr API key is invalid"
 msgstr "API de Prowlarr incorrecta"
 
+msgctxt "#30225"
+msgid "You need to configure Elhosted/KnighCrawlerr first"
+msgstr ""
+
 msgctxt "#30226"
 msgid "You need to configure Plex first"
 msgstr "Necesitas configuar Plex primero"
