--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -108,8 +108,8 @@ msgid "Cache expiration hours"
 msgstr "Expiracion de Cache"
 
 msgctxt "#30106"
-msgid "Clear all cache"
-msgstr "Borrar toda la cache"
+msgid "Clear cache"
+msgstr "Borrar la cache"
 
 msgctxt "#30107"
 msgid "Enable cache"
