--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -183,6 +183,14 @@ msgctxt "#30231"
 msgid "The request to Elhosted failed."
 msgstr ""
 
+msgctxt "#30232"
+msgid "The request to Jackgram failed."
+msgstr ""
+
+msgctxt "#30233"
+msgid "The request to Mediafusion failed."
+msgstr ""
+
 msgctxt "#30240"
 msgid "TMDB cache cleared"
 msgstr ""
