--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -167,6 +167,13 @@ msgctxt "#30231"
 msgid "The request to Elhosted failed."
 msgstr "La peticion a Elhosted ha fallado"
 
+msgctxt "#30232"
+msgid "The request to Jackgram failed."
+msgstr "La peticion a Jackgram ha fallado"
+
+msgctxt "#30233"
+msgid "The request to Mediafusion failed."
+msgstr "La peticion a Mediafusion ha fallado"
 
 msgctxt "#30240"
 msgid "TMDB cache cleared"
