filter_by_episode setting applying to all indexers. Portuguese and Spanish translations

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -311,9 +311,6 @@ msgctxt "#30709"
 msgid "Drop torrent"
 msgstr ""
 
-
-
-
-
-
-
+msgctxt "#30710"
+msgid "Filter TV Shows by Season and Episode"
+msgstr ""
