--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -299,7 +299,6 @@ msgctxt "#30709"
 msgid "Drop torrent"
 msgstr "Drop torrent"
 
-
-
-
-
+msgctxt "#30710"
+msgid "Filter TV Shows by Season and Episode"
+msgstr "Filtrar programas de TV por temporada e episódio"
