--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -298,3 +298,7 @@ msgstr ""
 msgctxt "#30709"
 msgid "Drop torrent"
 msgstr "Drop torrent"
+
+msgctxt "#30710"
+msgid "Filter TV Shows by Season and Episode"
+msgstr "Filtrar programas de TV por temporada y episodio"
