--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -314,3 +314,22 @@ msgstr ""
 msgctxt "#30710"
 msgid "Filter TV Shows by Season and Episode"
 msgstr ""
+
+msgctxt "#30801"
+msgid "Transmission"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Enable Transmission"
+msgstr ""
+
+msgctxt "#30803"
+msgid "Username"
+msgstr ""
+
+msgctxt "#30804"
+msgid "Password"
+msgstr ""
+
+
+
