--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -302,3 +302,19 @@ msgstr "Drop torrent"
 msgctxt "#30710"
 msgid "Filter TV Shows by Season and Episode"
 msgstr "Filtrar programas de TV por temporada y episodio"
+
+msgctxt "#30801"
+msgid "Transmission"
+msgstr ""
+
+msgctxt "#30802"
+msgid "Enable Transmission"
+msgstr "Habilitar Transmission"
+
+msgctxt "#30803"
+msgid "Username"
+msgstr "Usuario"
+
+msgctxt "#30804"
+msgid "Password"
+msgstr "Clave"
