--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -791,6 +791,158 @@ msgctxt "#40029"
 msgid "Hebrew (Israel)"
 msgstr ""
 
+msgctxt "#40030"
+msgid "Hindi (India)"
+msgstr ""
+
+msgctxt "#40031"
+msgid "Hungarian (Hungary)"
+msgstr ""
+
+msgctxt "#40032"
+msgid "Indonesian (Indonesia)"
+msgstr ""
+
+msgctxt "#40033"
+msgid "Italian (Italy)"
+msgstr ""
+
+msgctxt "#40034"
+msgid "Japanese (Japan)"
+msgstr ""
+
+msgctxt "#40035"
+msgid "Georgian (Georgia)"
+msgstr ""
+
+msgctxt "#40036"
+msgid "Kazakh (Kazakhstan)"
+msgstr ""
+
+msgctxt "#40037"
+msgid "Kannada (India)"
+msgstr ""
+
+msgctxt "#40038"
+msgid "Korean (South Korea)"
+msgstr ""
+
+msgctxt "#40039"
+msgid "Lithuanian (Lithuania)"
+msgstr ""
+
+msgctxt "#40040"
+msgid "Latvian (Latvia)"
+msgstr ""
+
+msgctxt "#40041"
+msgid "Malayalam (India)"
+msgstr ""
+
+msgctxt "#40042"
+msgid "Malay (Malaysia)"
+msgstr ""
+
+msgctxt "#40043"
+msgid "Malay (Singapore)"
+msgstr ""
+
+msgctxt "#40044"
+msgid "Norwegian Bokmål (Norway)"
+msgstr ""
+
+msgctxt "#40045"
+msgid "Dutch (Netherlands)"
+msgstr ""
+
+msgctxt "#40046"
+msgid "Norwegian (Norway)"
+msgstr ""
+
+msgctxt "#40047"
+msgid "Polish (Poland)"
+msgstr ""
+
+msgctxt "#40048"
+msgid "Portuguese (Brazil)"
+msgstr ""
+
+msgctxt "#40049"
+msgid "Portuguese (Portugal)"
+msgstr ""
+
+msgctxt "#40050"
+msgid "Romanian (Romania)"
+msgstr ""
+
+msgctxt "#40051"
+msgid "Russian (Russia)"
+msgstr ""
+
+msgctxt "#40052"
+msgid "Sinhalese (Sri Lanka)"
+msgstr ""
+
+msgctxt "#40053"
+msgid "Slovak (Slovakia)"
+msgstr ""
+
+msgctxt "#40054"
+msgid "Slovenian (Slovenia)"
+msgstr ""
+
+msgctxt "#40055"
+msgid "Serbian (Serbia)"
+msgstr ""
+
+msgctxt "#40056"
+msgid "Swedish (Sweden)"
+msgstr ""
+
+msgctxt "#40057"
+msgid "Tamil (India)"
+msgstr ""
+
+msgctxt "#40058"
+msgid "Telugu (India)"
+msgstr ""
+
+msgctxt "#40059"
+msgid "Thai (Thailand)"
+msgstr ""
+
+msgctxt "#40060"
+msgid "Tagalog (Philippines)"
+msgstr ""
+
+msgctxt "#40061"
+msgid "Turkish (Turkey)"
+msgstr ""
+
+msgctxt "#40062"
+msgid "Ukrainian (Ukraine)"
+msgstr ""
+
+msgctxt "#40063"
+msgid "Vietnamese (Vietnam)"
+msgstr ""
+
+msgctxt "#40064"
+msgid "Mandarin (China)"
+msgstr ""
+
+msgctxt "#40065"
+msgid "Mandarin (Hong Kong)"
+msgstr ""
+
+msgctxt "#40066"
+msgid "Mandarin (Taiwan)"
+msgstr ""
+
+msgctxt "#40067"
+msgid "Zulu (South Africa)"
+msgstr ""
+
 msgctxt "#42418"
 msgid "Language and country"
 msgstr ""
