add peerflix indexer

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -671,6 +671,10 @@ msgctxt "#30806"
 msgid "Clear cache when update"
 msgstr ""
 
+msgctxt "#30807"
+msgid "Peerfix Configuration"
+msgstr ""
+
 msgctxt "#40000"
 msgid "Arabic (United Arab Emirates)"
 msgstr ""
