--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -191,6 +191,10 @@ msgctxt "#30233"
 msgid "The request to Mediafusion failed."
 msgstr ""
 
+msgctxt "#30234"
+msgid "The request to Peerflix failed."
+msgstr ""
+
 msgctxt "#30240"
 msgid "TMDB cache cleared"
 msgstr ""
