--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -183,6 +183,14 @@ msgctxt "#30234"
 msgid "The request to Peerflix failed."
 msgstr "La peticion a Peerflix ha fallado"
 
+msgctxt "#30235"
+msgid "Stremio"
+msgstr "Stremio"
+
+msgctxt "#30236"
+msgid "Stremio add-ons"
+msgstr "Addons de Stremio"
+
 msgctxt "#30240"
 msgid "TMDB cache cleared"
 msgstr "Cache de TMDB limpiada"
