--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -575,3 +575,7 @@ msgstr "Fazer login no Stremio"
 msgctxt "#30872"
 msgid "Enable or disable Stremio add-ons."
 msgstr "Habilitar ou desabilitar complementos do Stremio."
+
+msgctxt "#30873"
+msgid "Prioritize results in the selected language"
+msgstr "Priorizar resultados no idioma selecionado"
