--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1234,3 +1234,7 @@ msgstr "Iniciar sesión en Stremio"
 msgctxt "#30872"
 msgid "Enable or disable Stremio add-ons."
 msgstr "Habilita o deshabilita los complementos de Stremio."
+
+msgctxt "#30873"
+msgid "Prioritize results in the selected language"
+msgstr "Priorizar resultados en el idioma seleccionado"
