add toggle catalogs setting

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1258,3 +1258,7 @@ msgstr ""
 msgctxt "#30874"
 msgid "Update Addons"
 msgstr ""
+
+msgctxt "#30875"
+msgid "Toggle Catalogs Add-ons"
+msgstr "Alternar complementos de catalogos"
