refactor: remove deepl from settings

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1263,32 +1263,18 @@ msgctxt "#30875"
 msgid "Toggle Catalogs Add-ons"
 msgstr "Alternar complementos de catalogos"
 
-
 msgctxt "#30876"
-msgid "OpenSubtitles Configuration"
-msgstr ""
-
-
-msgctxt "#30877"
-msgid "Username"
+msgid "Subtitles Configuration"
 msgstr ""
 
 msgctxt "#30878"
-msgid "Password"
+msgid "Addon Host"
 msgstr ""
 
 msgctxt "#30879"
 msgid "Subtitles"
 msgstr ""
 
-msgctxt "#30880"
-msgid "DeepL Translator Configuration"
-msgstr ""
-
-msgctxt "#30881"
-msgid "Api Key"
-msgstr ""
-
 msgctxt "#30882"
-msgid "Target Language"
+msgid "Language"
 msgstr ""
