add fallback subtitle language option

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1276,5 +1276,9 @@ msgid "Subtitles"
 msgstr ""
 
 msgctxt "#30882"
-msgid "Language"
+msgid "Primary Language"
+msgstr ""
+
+msgctxt "#30883"
+msgid "Secondary Language"
 msgstr ""
