refactor: update translation for "Search" to "Sources" in multiple language files

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1216,7 +1216,7 @@ msgid "Specify the torrent client"
 msgstr ""
 
 msgctxt "#30864"
-msgid "Search"
+msgid "Sources"
 msgstr ""
 
 msgctxt "#30865"
