--- a/resources/language/Portuguese/strings.po
+++ b/resources/language/Portuguese/strings.po
@@ -540,7 +540,7 @@ msgid "Specify the torrent client"
 msgstr "Especificar o cliente de torrent"
 
 msgctxt "#30864"
-msgid "Search"
+msgid "Sources"
 msgstr "Pesquisar"
 
 msgctxt "#30865"
