--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -272,8 +272,8 @@ msgid "Stop downloading"
 msgstr "Parar o download"
 
 msgctxt "#30702"
-msgid "Download"
-msgstr "Download"
+msgid "Downloads"
+msgstr "Downloads"
 
 msgctxt "#30703"
 msgid "Resume"
@@ -583,3 +583,7 @@ msgstr "Priorizar resultados no idioma selecionado"
 msgctxt "#30875"
 msgid "Toggle Catalogs Add-ons"
 msgstr ""
+
+msgctxt "#30876"
+msgid "Download directory"
+msgstr "Download directory"
