feat: add Trakt.tv scrobbling feature with settings for enabling/disabling

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1266,3 +1266,7 @@ msgstr "Alternar complementos de catalogos"
 msgctxt "#30876"
 msgid "Download directory"
 msgstr ""
+
+msgctxt "#30877"
+msgid "Enable Trakt.tv Scrobbling"
+msgstr ""
